feat: finito faq card. Faq

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-12">
+        <div class="row pt-3">
+            <div class="col-12 col-xl-9">
                 <!-- header 'Catalogo Libri + tasto' -->
                 <div class="row">
                     <div class="col-6">
@@ -231,8 +231,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
+            <div class="col-12 col-xl-3">
+                <div class="card mt-2">
                     <div class="card-header">
                         <h4>Todo</h4>
                     </div>
@@ -244,7 +244,8 @@
                             </li>
                             <li class="list-group-item">
                                 <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                                <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti scaduti</label>
+                                <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti
+                                    scaduti</label>
                             </li>
                             <li class="list-group-item">
                                 <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
@@ -253,25 +254,60 @@
                         </ul>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card mt-2">
                     <div class="card-header">
-                        <h4>F.A.Q.</h4>
+                        <h4>F.A.Q.</h4> 
                     </div>
                     <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                                <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                                <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti scaduti</label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                                <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
-                            </li>
-                        </ul>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        Come aggiungere un nuovo libro?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Rubare rubare rubare rubare rubare rubare rubare rubare
+                                        rubare rubare rubare rubare rubare rubare rubare rubare rubare rubare rubare
+                                        rubare rubare rubare rubare rubare rubare rubare rubare rubare rubare rubare
+                                        rubare rubare rubare rubare rubare rubare rubare .</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                        aria-controls="flush-collapseTwo">
+                                        Come posso accedere all'anagrafica utenti?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Minacciare minacciare minacciare minacciare minacciare
+                                        minacciare minacciare minacciare minacciare minacciare minacciare minacciare
+                                        minacciare minacciare minacciare minacciare minacciare minacciare minacciare
+                                        minacciare minacciare .</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                        aria-controls="flush-collapseThree">
+                                        Posso usare questa dashboard da mobile?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Non si puo' Non si puo' Non si puo' Non si puo' Non si
+                                        puo' Non si puo' Non si puo' Non si puo' Non si puo' Non si puo' Non si puo' Non
+                                        si puo' Non si puo' Non si puo' Non si puo' Non si puo' Non si puo' .</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
